--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                  <a class="nav-link" href="About.html">About Us <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="about.html">About Us <span class="sr-only">(current)</span></a>
                 </li>
               </ul>
               
